force-app/main/default/objects/OpenAI_Config__mdt/OpenAI_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for OpenAI API integration with calendar system</description>
    <label>OpenAI Configuration</label>
    <pluralLabel>OpenAI Configurations</pluralLabel>
</CustomObject>