force-app/main/default/objects/OpenAI_Config__mdt/fields/API_Model__c.field-meta.xml
<CustomField>
    <fullName>API_Model__c</fullName>
    <defaultValue>&quot;gpt-4&quot;</defaultValue>
    <description>OpenAI model to use for API calls (e.g., gpt-4, gpt-3.5-turbo)</description>
    <label>API Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>