force-app/main/default/objects/OpenAI_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable OpenAI integration</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>