force-app/main/default/objects/OpenAI_Config__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Maximum number of tokens to generate in API response</description>
    <label>Max Tokens</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>