force-app/main/default/objects/OpenAI_Config__mdt/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0.70</defaultValue>
    <description>Controls randomness in API responses (0.0 to 2.0, lower = more focused)</description>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>